# ap-firmware-uploader

./: .gitignore  .pre-commit-config.yaml  README.md  install_ALL.bat  pyproject.toml  script.py  tbump.toml
src/ap_uploader/: __init__.py  connection.py  errors.py  firmware.py  mavlink.py  mock.py  network.py  protocol.py  uploader.py  utils.py
src/ap_uploader/cli/: __init__.py  __main__.py  rich_ui.py
src/ap_uploader/io/: __init__.py  base.py  factory.py  memory.py  serial.py  tcp.py  udp.py
src/ap_uploader/scanners/: base.py  fixed.py  serial.py  udp.py
test/: test_connection.py  test_firmware.py  test_io_serial.py  test_io_tcp.py  test_io_udp.py  test_mock.py  test_protocol.py  test_utils.py
