[project]
name = "ap-uploader"
version = "0.1.0"
description = "Firmware uploader for ArduPilot and PX4 bootloaders"
authors = [{ name = "Tamas Nepusz", email = "ntamas@gmail.com" }]
license = "MIT"
requires-python = ">=3.7,<4.0"
dependencies = [
  "rich>=12.2.0,<13.0",
  "pyserial>=3.5,<4.0",
  "anyio>=3.5.0,<4.0"
]
[project.scripts]
ap-uploader = "ap_uploader.cli.__main__:main"

[tool.poetry]
packages = [
    { include = "ap_uploader", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
trio = "^0.20.0"
pytest-trio = "^0.7.0"
coverage = { version = "^6.3.2", extras = ["toml"] }
pytest-cov = "^3.0.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/ap_uploader/mavlink.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "raise NotImplementedError",
  "def __repr__",
  "pragma: no cover"
]

[tool.pytest.ini_options]
trio_mode = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]
extend-exclude = ["src/flockwave/server/ext/socketio/vendor"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
