[project]
name = "ap-uploader"
version = "0.1.0"
description = "Firmware uploader for ArduPilot and PX4 bootloaders"
authors = [{ name = "Tamas Nepusz", email = "ntamas@gmail.com" }]
license = "MIT"
requires-python = ">=3.9,<4.0"
dependencies = ["rich>=14.0.0", "pyserial>=3.5,<4.0", "anyio>=4.9.0"]

[project.scripts]
ap-uploader = "ap_uploader.cli.__main__:main"

[dependency-groups]
dev = [
  "trio>=0.29.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "pytest-trio>=0.8.0",
  "coverage[toml]>=7.8.0",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/ap_uploader/mavlink.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "raise NotImplementedError",
  "def __repr__",
  "pragma: no cover",
]

[tool.pytest.ini_options]
trio_mode = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]
extend-exclude = ["src/flockwave/server/ext/socketio/vendor"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
